[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sweetroll-basic"
version = "0.1.0"
description = "A minimal, extensible terminal text editor in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sweetroll = "sweetroll.__main__:main"

[tool.setuptools.packages.find]
include = ["sweetroll*"]
